@@ -146,7 +146,7 @@ class mod_web_dmail extends t3lib_SCbase {
 	 * @return	[type]		...
 	 */
 	function menuConfig()	{
-		global $LANG,$TYPO3_CONF_VARS,$BE_USER;
+		global $LANG,$TYPO3_CONF_VARS;
 
 		$this->MOD_MENU = Array (
 			'dmail_mode' => Array (
@@ -160,14 +160,23 @@ class mod_web_dmail extends t3lib_SCbase {
 				)
 			);
 			
-			// Hook for preprocessing of the content for formmails:
+			// for adding functions to the main menu:
 		if (is_array($TYPO3_CONF_VARS['EXT']['directmail']['append-functions'])) {
 			foreach($TYPO3_CONF_VARS['EXT']['directmail']['append-functions'] as $_funcRef) {
 				$_params = array();
 				$temp = t3lib_div::callUserFunction($_funcRef,$_params,$this);
-				$this->MOD_MENU['dmail_mode'] = $this->MOD_MENU['dmail_mode'] +$temp;
+				$this->MOD_MENU['dmail_mode'] = $this->MOD_MENU['dmail_mode'] + $temp;
 			}
 		}
+
+			// Hook for processing of the main menu:
+		if (is_array($TYPO3_CONF_VARS['EXT']['directmail']['modify-functions'])) {
+			foreach($TYPO3_CONF_VARS['EXT']['directmail']['modify-functions'] as $_funcRef) {
+				$_params = array('menuItems' => &$this->MOD_MENU['dmail_mode']);
+				t3lib_div::callUserFunction($_funcRef,$_params,&$this);
+			}
+		}
+
 		parent::menuConfig();
 	}	
 	/**
@@ -274,7 +283,7 @@ class mod_web_dmail extends t3lib_SCbase {
 			// Draw the header.
 			$this->doc = t3lib_div::makeInstance('template');
 			$this->doc->backPath = $BACK_PATH;
-			$this->doc->form='<form action="" method="POST">';
+			$this->doc->form='<form action="" method="post" enctype="multipart/form-data">';
 			
 			// JavaScript
 			$this->doc->JScode = '
@@ -371,6 +380,7 @@ class mod_web_dmail extends t3lib_SCbase {
 		}
 		$this->content .= $theOutput;
 	}
+
 	/**
 	 * Function mailModule main()
 	 *
@@ -473,6 +483,13 @@ class mod_web_dmail extends t3lib_SCbase {
 				case 'stats':
 					$theOutput .= $this->cmd_stats($row);
 					break;
+				default:
+					if (is_array($TYPO3_CONF_VARS['EXT']['directmail']['handledirectmailcmd-'.$this->CMD])) {
+						foreach($TYPO3_CONF_VARS['EXT']['directmail']['handledirectmailcmd-'.$this->CMD] as $_funcRef) {
+							$_params = array('pObj' => &$this);
+							$theOutput .= t3lib_div::callUserFunction($_funcRef,$_params,&$this);
+						}
+					}
 				}
 				$theOutput = $this->directMail_optionsMenu($row, $this->CMD).$theOutput;
 				if (!$this->noView)	{
@@ -1876,7 +1893,7 @@ class mod_web_dmail extends t3lib_SCbase {
 			$theOutput .= $this->cmd_convertCategories();
 			break;
 		default:
-				// Hook for preprocessing of the content for formmails:
+				// Hook for handling of custom modes:
 			if (is_array($TYPO3_CONF_VARS['EXT']['directmail']['handlemode-'.$mode])) {
 				foreach($TYPO3_CONF_VARS['EXT']['directmail']['handlemode-'.$mode] as $_funcRef) {
 					$_params = array();
@@ -3873,6 +3890,15 @@ class mod_web_dmail extends t3lib_SCbase {
 		if ($row['scheduled'] && $row['issent']) {
 			$menuItems['stats']=$LANG->getLL('dmail_menuItems_stats');
 		}
+
+			// Hook for processing of the secondary menu (mode "direct mail"):
+		if (is_array($TYPO3_CONF_VARS['EXT']['directmail']['modify-directmailcmds'])) {
+			foreach($TYPO3_CONF_VARS['EXT']['directmail']['modify-directmailcmds'] as $_funcRef) {
+				$_params = array('menuItems' => &$menuItems, 'current' => $current, 'row' => $row);
+				t3lib_div::callUserFunction($_funcRef,$_params,&$this);
+			}
+		}
+
 		$menu = t3lib_BEfunc::getFuncMenu($this->id,'CMD',$current,$menuItems,'','&sys_dmail_uid=' . $row['uid']);
 		
 		return $this->doc->section('','<div style="text-align: right;">'.$menu.t3lib_BEfunc::cshItem($this->cshTable,'directmail_actions',$BACK_PATH).'</div>');
